--- a/RF_Go/RF_Go.csproj
+++ b/RF_Go/RF_Go.csproj
@@ -50,6 +50,8 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="Makaretu.Dns" Version="2.0.1" />
+        <PackageReference Include="Makaretu.Dns.Multicast.New" Version="0.37.0" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Maui" Version="8.0.3" />
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="*">
