--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
 RF_Go.db3
+Run Command
 # User-specific files
 *.rsuser
 *.suo
