Added modal for devices and CSS stuff. Starting the licensing server and communication with NodeJS on the side

--- a/RF_Go/Properties/launchSettings.json
+++ b/RF_Go/Properties/launchSettings.json
@@ -1,9 +1,7 @@
 {
   "profiles": {
     "Windows Machine": {
-      "commandName": "MsixPackage",
-      "native
-        ging": false
+      "commandName": "MsixPackage"
     }
   }
 }
