Docusaurus - Alpha version

--- a/RF_Go/Properties/launchSettings.json
+++ b/RF_Go/Properties/launchSettings.json
@@ -2,6 +2,10 @@
   "profiles": {
     "Windows Machine": {
       "commandName": "MsixPackage"
+    },
+    "Profil 1": {
+      "commandName": "Project",
+      "nativeDebugging": false
     }
   }
 }
