--- a/RF_Go/RF_Go.csproj
+++ b/RF_Go/RF_Go.csproj
@@ -77,6 +77,7 @@
 
     <ItemGroup>
         <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+        <PackageReference Include="CommunityToolkit.Maui" Version="8.0.0" />
         <PackageReference Include="LiveCharts" Version="0.9.7" />
         <PackageReference Include="LiveChartsCore.SkiaSharpView.Maui" Version="2.0.0-rc4.5" />
         <PackageReference Include="Makaretu.Dns" Version="2.0.1" />
