--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,28 +34,24 @@ jobs:
     - name: Test
       run: dotnet test --no-build --verbosity normal --configuration Release
     
-    - name: Publish Windows
-      run: dotnet publish RF_Go/RF_Go.csproj -c Release -f net8.0-windows10.0.19041.0 -p:RuntimeIdentifier=win-x64 --self-contained -o ./publish/win-x64
-    
-    - name: Create Windows Installer
-      run: |
-        # Ajoutez ici les commandes pour créer un installateur (ex: avec WiX ou InnoSetup)
-        # Cette étape dépend de votre système d'installation préféré
-    
     - name: Extract Version
       id: get_version
       shell: pwsh
       run: |
         $TAG = $env:GITHUB_REF.Replace('refs/tags/', '')
-        echo "::set-output name=VERSION::$TAG"
+        echo "VERSION=$TAG" >> $env:GITHUB_OUTPUT
+    
+    - name: Publish Windows
+      run: |
+        dotnet publish RF_Go/RF_Go.csproj -c Release -f net8.0-windows10.0.19041.0 -p:RuntimeIdentifier=win-x64 --self-contained -o ./publish/win-x64
+        Compress-Archive -Path ./publish/win-x64/* -DestinationPath ./RF_Go-${{ steps.get_version.outputs.VERSION }}-windows-x64.zip
     
     - name: Create GitHub Release
       id: create_release
       uses: softprops/action-gh-release@v1
       with:
         files: |
-          ./publish/win-x64/**/*.exe
-          ./publish/win-x64/**/*.dll
+          ./RF_Go-${{ steps.get_version.outputs.VERSION }}-windows-x64.zip
         name: RF_Go ${{ steps.get_version.outputs.VERSION }}
         draft: false
         prerelease: false
