--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -79,35 +79,18 @@ jobs:
         $content += "- Compatible avec Windows 10/11`n"
         Set-Content -Path "./release-notes.md" -Value $content
     
-    - name: Find available files
-      id: find_files
-      shell: pwsh
+    - name: Prepare release files
       run: |
-        $files = @()
-        
-        if (Test-Path "./RF_Go-${{ steps.get_version.outputs.VERSION }}-windows-x64.zip") {
-          $files += "./RF_Go-${{ steps.get_version.outputs.VERSION }}-windows-x64.zip"
-        }
-        
-        if (Test-Path "./RF_Go-${{ steps.get_version.outputs.VERSION }}-android.zip") {
-          $files += "./RF_Go-${{ steps.get_version.outputs.VERSION }}-android.zip"
-        }
-        
-        if (Test-Path "./RF_Go-${{ steps.get_version.outputs.VERSION }}-macos-x64.zip") {
-          $files += "./RF_Go-${{ steps.get_version.outputs.VERSION }}-macos-x64.zip"
-        }
-        
-        if (Test-Path "./RF_Go-${{ steps.get_version.outputs.VERSION }}-ios-arm64.zip") {
-          $files += "./RF_Go-${{ steps.get_version.outputs.VERSION }}-ios-arm64.zip"
-        }
-        
-        $filesJson = $files | ConvertTo-Json -Compress
-        echo "FILES=$filesJson" >> $env:GITHUB_OUTPUT
+        mkdir -p ./release-files
+        cp ./RF_Go-${{ steps.get_version.outputs.VERSION }}-windows-x64.zip ./release-files/ 2>$null || echo "Windows build not found"
+        cp ./RF_Go-${{ steps.get_version.outputs.VERSION }}-android.zip ./release-files/ 2>$null || echo "Android build not found"
+        cp ./RF_Go-${{ steps.get_version.outputs.VERSION }}-macos-x64.zip ./release-files/ 2>$null || echo "macOS build not found"
+        cp ./RF_Go-${{ steps.get_version.outputs.VERSION }}-ios-arm64.zip ./release-files/ 2>$null || echo "iOS build not found"
 
     - name: Create GitHub Release
       uses: softprops/action-gh-release@v1
       with:
-        files: ${{ fromJson(steps.find_files.outputs.FILES) }}
+        files: ./release-files/*
         name: RF_Go ${{ steps.get_version.outputs.VERSION }}
         draft: false
         prerelease: false
